--- a/index.css
+++ b/index.css
@@ -595,6 +595,6 @@ body {
         rgba(10, 10, 10, 1),
         rgba(10, 10, 10, 0)
       ),
-      url("https://images.unsplash.com/photo-1553748024-d1b27fb3f960?w=1500&q=80") !important;
+      url("https://images.pexels.com/photos/5240544/pexels-photo-5240544.jpeg?") !important;
   }
 }
