--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ body {
   right: 0;
 }
 
-#spinner {
+/* #spinner {
   animation: rotate 0.5s infinite linear;
   width: 50px;
   height: 50px;
@@ -37,7 +37,7 @@ body {
   border-bottom: 2px solid var(--text-color);
   border-radius: 50%;
   margin: 0;
-}
+} */
 
 @keyframes rotate {
   0% {
